--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
-h3 {
-    color: blue;
-}
+.contenedor {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+  }
