--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .contenedor {
     display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto ;
   }
